# eventbridge-backbone

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  justfile  mypy.ini  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: build-test-common.yml  build-test-on-main.yml  manuel-deployment.yml
cdk/: constants.py
cdk/stacks/: base_stack.py  base_stage.py  bus_stack.py  bus_stage.py  delivery_stack.py  delivery_stage.py  order_stack.py  order_stage.py  pipeline_stack.py
eventbridge_backbone/: eventbridge_backbone_stack.py
handlers/: event_util.py  pyproject.toml
handlers/delivery_handler/: handler.py
handlers/order_handler/: handler.py
tests/: utils.py
tests/e2e/: test_service.py
tests/infrastructure/: conftest.py  test_cdk_stacks.py
tests/infrastructure/__snapshots__/: test_cdk_stacks.ambr
tests/integration/: cross_account_test_events.py  test_events.py
tests/unit/: tes_example.py  test_delivery_handler.py  test_eventbridge_backbone_stack.py
