[tool.poetry]
name = "eventbridge-backbone"
version = "0.0.0"
description = "Eventbridge Backbone"
authors = ["Diren"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
]
repository="https://github.com/direnakkoc/eventbridge-backbone"
readme = "README.md"
keywords = ["serverless", "cdk"]
packages = [
    { include = "**/*", from = "handlers" },
    { include = "cdk" },
]


[tool.poetry.dependencies]
python = "^3.10.0"
boto3 = "^1.28.50"
aws-lambda-powertools = "^2.30.2"
aws-xray-sdk = "^2.12.1"


[tool.ruff]
  select = [
    # Flake8 ruleset
    "F", # Pyflake
    "E", # Pycodestyle
    "W", # Pycodestyle
    "I001"# isort
]
  src = [".", "handlers"]
